update next config for railway

--- a/backend/app/.env
+++ b/backend/app/.env
@@ -3,3 +3,5 @@ DATABASE_URL= postgresql://postgres:Khushita%40123@db.yggfxlbzjrqemdadkag.supaba
 # postgresql://postgres:Khushita@localhost:5432/salon_db
 
 postgresql://postgres:Khushita%40123@db.yggfxlbzjrwqemdadkag.supabase.co:5432/postgres
+
+postgresql://postgres:Khushita%40123@db.yggfxlbzjrwqemdadkag.supabase.co:5432/postgres?sslmode=require
